# mcp-continuous-auditor

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.de.md  README.md
.github/workflows/: ci.yml.template  live-probe.yml.template  redteam-regen.yml.template  (+1 more)
deploy/: 00-preflight.sh  README.md
examples/worker-tdd-demo/: README.md  pyproject.toml
examples/worker-tdd-demo/src/zurich_opendata_demo/: __init__.py  server.py
examples/worker-tdd-demo/tests/: test_dataset_count.py
examples/worker-tdd-demo/tests/fixtures/: package_list.json
openclaw/: openclaw.json
promptfoo/: README.md  package-lock.json  package.json  promptfooconfig.determ.yaml  promptfooconfig.yaml
relay/: telegram-webhook-relay.js
schemas/: README.md  generate_schemas.py  geojson_featurecollection.json  zurich_datastore_sql.json
scripts/: audit-target.sh  budget_guard.py  improve-loop.sh  improve_acceptance.py  improve_loop_support.py  improve_writer.py  install-promptfoo.sh  live_probe.manifest.json  live_probe.py  nightly-audit.sh  nightly_audit_report.py  run-determ-eval.sh  sync_findings_issues.py  telegram_intake.py  telegram_notify.py
tensorzero/: docker-compose.yml  tensorzero.toml
tests/: README.md  test_audit_cycle.py  test_broker_pipeline.py  test_budget_guard.py  test_egress_interlock.py  test_improve_acceptance.py  test_improve_loop.py  test_improve_loop_support.py  test_improve_writer.py  test_nightly_audit_report.py  test_promptfoo_profiles.py  test_smoke_target.py  test_sync_findings_issues.py  test_telegram_intake.py  test_telegram_notify.py
(+51 files in other folders)
