[project]
name = "zurich-opendata-demo"
version = "0.0.0"
description = "Runnable demonstration of the Worker TDD invariant (AGENTS.md Phase 3)."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zurich_opendata_demo"]

[tool.pytest.ini_options]
# Async tests are explicit (`@pytest.mark.asyncio`) — the fastmcp-testing skill's rule.
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]
